--- a/app/views/pages/_call.html.erb
+++ b/app/views/pages/_call.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+        <h2 class="mb-4">Email me with any questions!</h2>
       </div>
       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
         <form>
@@ -13,7 +13,7 @@
               <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
             </div>
             <div class="col-12 col-md-3">
-              <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+              <button type="submit" class="btn btn-block btn-lg btn-primary">Send!</button>
             </div>
           </div>
         </form>
