--- a/app/views/pages/_features.html.erb
+++ b/app/views/pages/_features.html.erb
@@ -7,8 +7,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-screen-desktop m-auto text-primary"></i>
           </div>
-          <h3>Fully Responsive</h3>
-          <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+          <h3>Our Moto!</h3>
+          <p class="lead mb-0">We're not selling houses, we're selling<i>happiness</i>!</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -16,8 +16,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-layers m-auto text-primary"></i>
           </div>
-          <h3>Bootstrap 4 Ready</h3>
-          <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+          <h3>Buying and Selling!</h3>
+          <p class="lead mb-0">Content!</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -25,8 +25,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-check m-auto text-primary"></i>
           </div>
-          <h3>Easy to Use</h3>
-          <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+          <h3>CBRB ranked number 1!</h3>
+          <p class="lead mb-0">Content</p>
         </div>
       </div>
     </div>
