--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light bg-light static-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Start Bootstrap</a>
-    <a class="btn btn-primary" href="#">Sign In</a>
+    <a class="navbar-brand" href="#">Julia Valentine Arizona Properties</a>
+    <a class="btn btn-primary" href="#">Email me!</a>
   </div>
 </nav>
