--- a/app/views/pages/_showcase.html.erb
+++ b/app/views/pages/_showcase.html.erb
@@ -3,24 +3,31 @@
   <div class="container-fluid p-0">
     <div class="row no-gutters">
 
-      <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+      <div class="col-lg-6 order-lg-2 text-white showcase-img">
+        <%= image_tag 'modern-re-template.jpg' %>
+      </div>
       <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-        <h2>Fully Responsive Design</h2>
-        <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+        <h2>Thinking about taking the leap to Arizona?</h2>
+        <p class="lead mb-0">Let us help you find the best location. From trendy to quaint, there's a neighborhood for you
+                             to settle down in and kick off your shoes. Where will you be this time next year if you don't take the first step?</p>
       </div>
     </div>
     <div class="row no-gutters">
-      <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+      <div class="col-lg-6 text-white showcase-img">
+        <%= image_tag 'kitchen-re-template.jpg' %>
+      </div>
       <div class="col-lg-6 my-auto showcase-text">
-        <h2>Updated For Bootstrap 4</h2>
-        <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+        <h2>A little about us...</h2>
+        <p class="lead mb-0">We are Julia A. Valentine and Tabitha Valentine Morales, a Coldwell Banker Residential Realty team located in choice Fountain Hills, AZ (#fabfountainhills). After years of living abroad, including Europe, Australia, Costa Rica and Panama, we made Arizona our home in 2005.</p>
       </div>
     </div>
     <div class="row no-gutters">
-      <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+      <div class="col-lg-6 order-lg-2 text-white showcase-img">
+         <%= image_tag 'country-england-re-template.jpg' %>
+      </div>
       <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-        <h2>Easy to Use &amp; Customize</h2>
-        <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+        <h2>CBRB is International!</h2>
+        <p class="lead mb-0">We can refer you to the right agent for wherever you want to go!</p>
       </div>
     </div>
   </div>
