--- a/app/views/pages/_team.html.erb
+++ b/app/views/pages/_team.html.erb
@@ -1,27 +1,20 @@
  <!-- Testimonials -->
 <section class="testimonials text-center bg-light">
   <div class="container">
-    <h2 class="mb-5">What people are saying...</h2>
+    <h2 class="mb-5">The Team</h2>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-6">
         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-          <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-          <h5>Margaret E.</h5>
-          <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+          <%= image_tag 'julia-round.jpg', class: "img-fluid rounded-circle mb-3" %>
+          <h5>Julia Valentine.</h5>
+          <p class="font-weight-light mb-0">"We specialize in Fountain Hills, Phoenix, Scottsdale, Biltmore, Chandler, Gilbert, Rio Verde and surrounding areas!"</p>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-6">
         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-          <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-          <h5>Fred S.</h5>
-          <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-          <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-          <h5>Sarah	W.</h5>
-          <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+          <%= image_tag 'tabitha.jpg', width: 100, class: "img-fluid rounded-circle mb-3" %>
+          <h5>Tabitha Valentine</h5>
+          <p class="font-weight-light mb-0">"We won't stop till we find you the right home!"</p>
         </div>
       </div>
     </div>
