--- a/app/views/pages/_features.html.erb
+++ b/app/views/pages/_features.html.erb
@@ -5,7 +5,7 @@
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
           <div class="features-icons-icon d-flex">
-            <i class="icon-screen-desktop m-auto text-primary"></i>
+            <i class="icon-home m-auto text-primary"></i>
           </div>
           <h3>Our Moto!</h3>
           <p class="lead mb-0">We're not selling houses, we're selling<i>happiness</i>!</p>
@@ -14,7 +14,7 @@
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
           <div class="features-icons-icon d-flex">
-            <i class="icon-layers m-auto text-primary"></i>
+            <i class="icon-organization m-auto text-primary"></i>
           </div>
           <h3>Buying and Selling!</h3>
           <p class="lead mb-0">Content!</p>
@@ -23,7 +23,7 @@
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
           <div class="features-icons-icon d-flex">
-            <i class="icon-check m-auto text-primary"></i>
+            <i class="icon-people m-auto text-primary"></i>
           </div>
           <h3>CBRB ranked number 1!</h3>
           <p class="lead mb-0">Content</p>
