Updated features and nav partial

--- a/app/views/pages/_features.html.erb
+++ b/app/views/pages/_features.html.erb
@@ -7,8 +7,8 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-home m-auto text-primary"></i>
           </div>
-          <h3>Our Moto!</h3>
-          <p class="lead mb-0">We're not selling houses, we're selling<i>happiness</i>!</p>
+          <h3>Our Motto</h3>
+          <p class="lead mb-0">We're not selling houses, we're selling <i>happiness</i>!</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -16,8 +16,9 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-organization m-auto text-primary"></i>
           </div>
-          <h3>Buying and Selling!</h3>
-          <p class="lead mb-0">Content!</p>
+          <h3>Buying and Selling</h3>
+          <p class="lead mb-0">Want to work with someone you trust? Communicaton and Negotiation are what we do! 
+                               We'll help you get the most with your home and leave you the upmost satisfied!</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -25,8 +26,9 @@
           <div class="features-icons-icon d-flex">
             <i class="icon-people m-auto text-primary"></i>
           </div>
-          <h3>CBRB ranked number 1!</h3>
-          <p class="lead mb-0">Content</p>
+          <h3>Referrals</h3>
+          <p class="lead mb-0">Want to leave the state, or move to AZ? Snow Bird, or just looking? Contact Us and we'll refer you to a qualified realtor who cares about your happiness. 
+                               We will also gladly receive any referral and will provide 100% to meet your home dreams!</p>
         </div>
       </div>
     </div>
