--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -2,6 +2,6 @@
 <nav class="navbar navbar-light bg-light static-top">
   <div class="container">
     <a class="navbar-brand" href="#">Julia Valentine Arizona Properties</a>
-    <a class="btn btn-primary" href="#">Email me!</a>
+    <a class="btn btn-primary" href="#">602-515-9289</a>
   </div>
 </nav>
