--- a/app/views/pages/_masthead.html.erb
+++ b/app/views/pages/_masthead.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5">602-515-9289</h1>
+        <h1 class="mb-5"></h1>
       </div>
     </div>
   </div>
