--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -25,17 +25,17 @@
       <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
           <li class="list-inline-item mr-3">
-            <a href="#">
+            <a href="https://www.facebook.com/julia.valentine.3745">
               <i class="fa fa-facebook fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item mr-3">
-            <a href="#">
+            <a href="https://twitter.com/OurAZlife">
               <i class="fa fa-twitter fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="http://view-instagram.com/usr/juliavalentineazproperties/id-3171631844">
               <i class="fa fa-instagram fa-2x fa-fw"></i>
             </a>
           </li>
